<resources>
    <string name="app_name">BlogApp</string>
    <string name="blog_app">Blog App</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="blog_app">Blog App</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_account">Already have account</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
</resources>